2020-05-15  Moritz Bunkus  <mo@bunkus.online>

        * EbmlCrc32: added a explicit assignment operator with default
        implementation as an explicit copy constructor exists (implicit
        assignment operators are deprecated in such cases).

2019-12-07  Moritz Bunkus  <moritz@bunkus.org>

        * When reading binary elements with a size of 0, the element was
        skipped by libebml instead of returned to the calling function.

        * Released v1.3.10.

2019-05-27  Moritz Bunkus  <moritz@bunkus.org>

        * Released v1.3.9.

2019-05-27  evpobr  <evpobr@gmail.com>

        * Build system: fixed symbol visibility issue causing linker
        failures since 1.3.8.

2019-05-25  Moritz Bunkus  <moritz@bunkus.org>

        * Released v1.3.8.

2019-05-19  evpobr  <evpobr@gmail.com>

        * Build system: various fixes to the cmake rules regarding
        visibility, naming and building DLLs on Windows.

2019-03-12  Moritz Bunkus  <moritz@bunkus.org>

        * Released v1.3.7.

2019-03-06  Moritz Bunkus  <moritz@bunkus.org>

        * Fixed the handling of Unicode codepoints > U+FFFF.

2018-04-23  Steve Lhomme <slhomme@matroska.org>

        * Fixed building on Windows with cmake.

2018-04-21  Steve Lhomme <slhomme@matroska.org>

        * Fixed building with gcc >= 7.

2018-04-20  Moritz Bunkus  <moritz@bunkus.org>

        * Released v1.3.6.

2018-04-19  Moritz Bunkus  <moritz@bunkus.org>

        * Converted the build system from autoconf/automake to
        cmake. Patches by Github user "evpobr" with fixes by myself.

2018-04-18  Moritz Bunkus  <moritz@bunkus.org>

        * Fixed undefined behavior when reading signed integers with
        negative values from files (though compilers implemented this the
        way we wanted them to already).

        * Fixed a small memory leak when reading an element runs into an
        I/O exception (e.g. due to having reached the end of the file).

2018-02-15  Steve Lhomme <slhomme@matroska.org>
